--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
+    "expo-crypto": "^9.2.0",
     "expo-status-bar": "~1.0.4",
+    "luxon": "^2.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
