--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
