--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-status-bar": "~1.0.4",
     "luxon": "^2.0.2",
     "react": "16.13.1",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
