--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "expo-status-bar": "~1.0.4",
     "luxon": "^2.0.2",
     "react": "16.13.1",
+    "react-csv": "^2.2.2",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-elements": "^3.4.2",
-    "react-native-web": "~0.13.12",
+    "react-native-reanimated": "^2.2.4",
+    "react-native-screens": "^3.9.0",
+    "react-native-web": "^0.17.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4"
   },
