--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "my-app",
-    "slug": "my-app",
+    "name": "CS/M Mentoring Dashboard",
+    "homepage":".",
+    "slug": "CS/M Mentoring Dashboard",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
