--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "CS/M Mentoring Dashboard",
-    "homepage":"./dash",
+    "homepage":"./",
     "slug": "CS/M Mentoring Dashboard",
     "version": "1.0.0",
     "orientation": "portrait",
