--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  "homepage":".",
+  "homepage":"/dash",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
